--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,16 @@ img {
   letter-spacing: 0.03em;
   text-transform: capitalize;
 }
+.section__title--right {
+  text-align: right;
+}
+
+.section__text {
+  margin-top: 18px;
+  margin-bottom: 16px;
+  max-width: 255px;
+  letter-spacing: 0.03em;
+}
 
 .page-header {
   position: fixed;
@@ -564,4 +574,15 @@ img {
 
 .symbol-hidden {
   display: none;
+}
+
+.gallery-container {
+  padding: 5px 16px;
+  background-color: #1d1d1d;
+}
+
+.gallery-center {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 342px;
 }/*# sourceMappingURL=main.css.map */
