--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -42,4 +42,16 @@ img {
   line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: capitalize;
+
+  &--right {
+    text-align: right;
+  }
+}
+
+.section__text {
+  margin-top: 18px;
+  margin-bottom: 16px;
+  max-width: 255px;
+
+  letter-spacing: 0.03em;
 }
