--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 @import './components/hero-section';
 @import './components/works-section';
 @import './components/services-section';
+@import './components/gallery-section';
