--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,3 +7,5 @@ $color-hero-bg: rgba(29, 29, 29, 0.85);
 
 $duration: 250ms;
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+$hero-gradient: linear-gradient(rgba(29, 29, 29, 0.85), rgba(29, 29, 29, 0.85));
