--- a/sass/components/_works-section.scss
+++ b/sass/components/_works-section.scss
@@ -2,6 +2,10 @@
   @extend %list;
 }
 
+.works-list__item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
 .work-thumb {
   display: flex;
   flex-wrap: wrap;
