--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,4 @@
 @import './components/works-section';
 @import './components/services-section';
 @import './components/gallery-section';
+@import './components/team-section';
