--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,6 @@
 @import './components/services-section';
 @import './components/gallery-section';
 @import './components/team-section';
+@import './components/contacts-section';
+@import './components/message-section';
+@import './layout/page-footer';
