--- a/sass/layout/_page-footer.scss
+++ b/sass/layout/_page-footer.scss
@@ -1,3 +1,112 @@
 .page-footer {
+  position: relative;
+
+  padding-top: 40px;
+  padding-bottom: 148px;
+
   background-color: $color-primary;
+}
+
+.page-footer__container {
+  display: flex;
+}
+
+.page-footer__logo {
+  flex-grow: 1;
+  margin-right: auto;
+
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: $color-secondary;
+}
+
+.page-footer__address {
+  display: none;
+}
+
+.about-us-box__descr,
+.support-box__descr {
+  margin-top: 0;
+  margin-bottom: 8px;
+
+  color: $color-secondary;
+}
+
+.about-us-box__list {
+  @extend %list;
+
+  margin-right: 16px;
+}
+
+.about-us-box__item:not(:last-child) {
+  margin-bottom: 4px;
+}
+
+.about-us-box__link,
+.support-box__link {
+  display: inline-block;
+
+  text-decoration: none;
+
+  color: $color-secondary;
+
+  transition: color $duration $timing-function;
+
+  &:hover,
+  &:focus {
+    color: $color-accent;
+  }
+}
+
+.support-box__list {
+  @extend %list;
+}
+
+.support-box__item {
+  margin-bottom: 4px;
+
+  &--hidden {
+    display: none;
+  }
+
+  &:nth-child(2) {
+    margin-bottom: 0;
+  }
+}
+
+.social-network-list {
+  @extend %list;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 64px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 271px;
+
+  background-color: $color-primary-bg;
+}
+
+.social-network-list__link {
+  display: block;
+
+  color: $color-primary;
+
+  transition: color $duration $timing-function;
+
+  &:hover,
+  &:focus {
+    color: $color-accent;
+  }
+}
+
+.social-network-list__icon {
+  fill: currentColor;
 }
