--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -10,6 +10,8 @@
   min-height: 60px;
 
   background-color: $color-primary-bg;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .site-nav {
