--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.social-network-list, .support-box__list, .about-us-box__list, .address-list, .team-list, .services-list, .services-imgs-list, .works-list {
+.social-network-list, .support-box__list, .about-us-box__list, .address-list, .team-list, .services-list, .services-imgs-list, .works-list, .menu-container__list {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -299,6 +299,9 @@ body {
   color: #1d1d1d;
   background-color: #ffffff;
 }
+body.lock {
+  overflow: hidden;
+}
 
 img {
   display: block;
@@ -393,14 +396,46 @@ img {
 .menu-btn:hover .menu-btn__icon, .menu-btn:focus .menu-btn__icon {
   color: #fe5d26;
 }
+.menu-btn--close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 
 .menu-btn__icon {
   fill: currentColor;
 }
 
 .menu-container {
-  display: none;
   position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 30;
+  padding: 40px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  transform: translateY(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-container.active {
+  transform: translateY(0);
+}
+
+.menu-container__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.menu-container__link {
+  font-size: 24px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: #1d1d1d;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-container__link:hover, .menu-container__link:focus {
+  color: #fe5d26;
 }
 
 .btn {
@@ -710,6 +745,7 @@ img {
 
 .page-footer__container {
   display: flex;
+  align-items: baseline;
 }
 
 .page-footer__logo {
@@ -779,7 +815,9 @@ img {
 }
 
 .social-network-list__link {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #1d1d1d;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
