--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,13 @@ body {
 body.lock {
   overflow: hidden;
 }
+@media screen and (min-width: 1320px) {
+  body {
+    padding-top: 80px;
+    font-size: 18px;
+    line-height: 1.78;
+  }
+}
 
 img {
   display: block;
@@ -316,10 +323,23 @@ img {
   padding-left: 16px;
   max-width: 375px;
 }
+@media screen and (min-width: 1320px) {
+  .container {
+    padding-right: 20px;
+    padding-left: 20px;
+    max-width: 1320px;
+  }
+}
 
 .section {
   padding-top: 24px;
   padding-bottom: 24px;
+}
+@media screen and (min-width: 1320px) {
+  .section {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 .section--small-top-padding {
   padding-top: 15px;
@@ -327,14 +347,12 @@ img {
 .section--small-bottom-padding {
   padding-bottom: 15px;
 }
-.section--big-top-padding {
-  padding-top: 48px;
-}
 .section--big-bottom-padding {
   padding-bottom: 96px;
 }
 
 .section__title {
+  position: relative;
   margin-top: 0;
   margin-bottom: 16px;
   font-weight: 500;
@@ -348,6 +366,13 @@ img {
 }
 .section__title--center {
   text-align: center;
+}
+@media screen and (min-width: 1320px) {
+  .section__title {
+    font-size: 32px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+  }
 }
 
 .section__text {
@@ -369,11 +394,23 @@ img {
   background-color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+@media screen and (min-width: 1320px) {
+  .page-header {
+    padding-top: 0;
+    padding-bottom: 0;
+    min-height: 80px;
+  }
+}
 
 .site-nav {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+}
+@media screen and (min-width: 1320px) {
+  .site-nav {
+    align-items: center;
+  }
 }
 
 .logo {
@@ -381,6 +418,10 @@ img {
   padding: 8px 0;
   width: 56px;
   height: 32px;
+}
+
+.logo__icon {
+  fill: #1d1d1d;
 }
 
 .menu-btn {
@@ -401,32 +442,56 @@ img {
   top: 10px;
   right: 10px;
 }
+@media screen and (min-width: 1320px) {
+  .menu-btn {
+    display: none;
+  }
+}
 
 .menu-btn__icon {
   fill: currentColor;
 }
 
-.menu-container {
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 30;
-  padding: 40px;
-  width: 100vw;
-  height: 100vh;
-  background-color: #ffffff;
-  transform: translateY(-100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu-container.active {
-  transform: translateY(0);
+@media screen and (max-width: 1319px) {
+  .menu-container {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 30;
+    padding: 40px;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff;
+    overflow-y: scroll;
+    transform: translateY(-100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-container.active {
+    transform: translateY(0);
+  }
 }
 
-.menu-container__item:not(:last-child) {
-  margin-bottom: 10px;
+@media screen and (min-width: 1320px) {
+  .menu-container__list {
+    display: flex;
+    gap: 48px;
+  }
+}
+
+@media screen and (max-width: 1319px) {
+  .menu-container__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1320px) {
+  .menu-container__item {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .menu-container__link {
+  display: inline-block;
   font-size: 24px;
   line-height: 1.33;
   letter-spacing: 0.03em;
@@ -436,6 +501,11 @@ img {
 }
 .menu-container__link:hover, .menu-container__link:focus {
   color: #fe5d26;
+}
+@media screen and (min-width: 1320px) {
+  .menu-container__link {
+    display: block;
+  }
 }
 
 .btn {
@@ -462,26 +532,72 @@ img {
   text-decoration: none;
   border: 1px solid #1d1d1d;
 }
-.btn--center {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
+@media screen and (max-width: 1319px) {
+  .btn--center {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1320px) {
+  .btn {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 290px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
+  }
 }
 
-.hero-section {
-  padding-top: 225px;
-  padding-bottom: 126px;
-  background-image: linear-gradient(rgba(29, 29, 29, 0.85), rgba(29, 29, 29, 0.85)), url("../images/mobile-images/mobile-hero-img.png");
-  background-size: contain;
-  background-position: center, 50% 74px;
-  background-repeat: no-repeat;
+@media screen and (max-width: 1319px) {
+  .hero-section {
+    padding-top: 225px;
+    padding-bottom: 126px;
+    background-image: linear-gradient(rgba(29, 29, 29, 0.85), rgba(29, 29, 29, 0.85)), url("../images/mobile-images/mobile-hero-img.png");
+    background-size: contain;
+    background-position: center, 50% 74px;
+    background-repeat: no-repeat;
+  }
 }
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (max-width: 1319px) and (min-device-pixel-ratio: 2), screen and (max-width: 1319px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 1319px) and (min-resolution: 192dpi), screen and (max-width: 1319px) and (min-resolution: 2dppx) {
   .hero-section {
     background-image: linear-gradient(rgba(29, 29, 29, 0.85), rgba(29, 29, 29, 0.85)), url("../images/mobile-images/mobile-hero-img@2x.png");
   }
 }
+@media screen and (min-width: 1320px) {
+  .hero-section {
+    padding-top: 206px;
+    padding-bottom: 131px;
+    background-color: #1d1d1d;
+  }
+}
 
+.hero-section__container {
+  position: relative;
+}
+
+.hero-section__img {
+  position: absolute;
+  bottom: -131px;
+  left: 0;
+  width: 620px;
+}
+@media screen and (max-width: 1319px) {
+  .hero-section__img {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1320px) {
+  .hero-section__box {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    width: 620px;
+  }
+}
 .hero-section__title {
   margin-top: 0;
   margin-bottom: 32px;
@@ -492,15 +608,70 @@ img {
   text-transform: capitalize;
   color: #ffffff;
 }
+@media screen and (min-width: 1320px) {
+  .hero-section__title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.43;
+    letter-spacing: 0.03em;
+  }
+}
+
+.works-section {
+  position: relative;
+  padding-top: 48px;
+}
+@media screen and (min-width: 1320px) {
+  .works-section {
+    padding-top: 89px;
+  }
+}
+
+@media screen and (min-width: 1320px) {
+  .works-section__title {
+    position: absolute;
+    margin-bottom: 0;
+  }
+  .works-section__title::after {
+    position: absolute;
+    top: 50%;
+    left: 221px;
+    content: "";
+    display: block;
+    height: 4px;
+    width: 180px;
+    background-color: #fe5d26;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+    transform: translateY(-50%);
+  }
+}
 
 .works-list__item:not(:last-child) {
   margin-bottom: 24px;
 }
+@media screen and (min-width: 1320px) {
+  .works-list__item:not(:last-child) {
+    margin-bottom: 48px;
+  }
+}
+@media screen and (min-width: 1320px) {
+  .works-list__item {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+  .works-list__item:nth-child(2n) {
+    flex-direction: row;
+  }
+}
 
 .work-thumb {
-  display: flex;
-  flex-wrap: wrap;
   margin-bottom: 16px;
+}
+@media screen and (min-width: 1320px) {
+  .work-thumb {
+    margin-bottom: 0;
+  }
 }
 
 .work-thumb__container {
@@ -512,7 +683,7 @@ img {
 }
 .work-thumb__container::after {
   position: absolute;
-  left: 0;
+  right: 0;
   bottom: -13px;
   content: "";
   display: block;
@@ -521,8 +692,30 @@ img {
   background-color: #fe5d26;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
 }
+@media screen and (min-width: 1320px) {
+  .work-thumb__container::after {
+    bottom: -40px;
+    height: 4px;
+    width: 620px;
+  }
+}
+@media screen and (min-width: 1320px) {
+  .work-thumb__container {
+    gap: 40px;
+    flex-direction: row-reverse;
+    margin-bottom: 48px;
+  }
+}
 .work-thumb__container--reverse {
   flex-direction: row-reverse;
+}
+@media screen and (min-width: 1320px) {
+  .work-thumb__container--reverse {
+    flex-direction: row;
+  }
+  .work-thumb__container--reverse::after {
+    left: 0;
+  }
 }
 
 .work-thumb__title {
@@ -539,16 +732,36 @@ img {
   background-color: #fe5d26;
   transform: rotate(180deg);
 }
+@media screen and (min-width: 1320px) {
+  .work-thumb__title {
+    padding: 0 19px;
+    height: 290px;
+    font-size: 24px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
+  }
+}
 
 .work-thumb__descr {
   display: flex;
   justify-content: space-between;
-  flex-grow: 1;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 10px;
   line-height: 1.6;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1320px) {
+  .work-thumb__descr {
+    margin-left: auto;
+    max-width: 620px;
+    font-size: 18px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
+  }
+  .work-thumb__descr--left {
+    margin-left: 0;
+  }
 }
 
 .work-thumb__time {
@@ -560,11 +773,41 @@ img {
   margin-bottom: 0;
   letter-spacing: 0.03em;
 }
+@media screen and (min-width: 1320px) {
+  .works-list__text {
+    padding-top: 116px;
+    width: 510px;
+  }
+}
 
-.services-imgs-list {
-  position: relative;
-  margin-bottom: 17px;
-  height: 252px;
+@media screen and (min-width: 1320px) {
+  .services-container {
+    position: relative;
+    height: 608px;
+  }
+  .services-container__title {
+    position: relative;
+    margin-bottom: 98px;
+    padding-top: 48px;
+  }
+  .services-container__title::after {
+    position: absolute;
+    left: 0;
+    top: -4px;
+    content: "";
+    display: block;
+    height: 4px;
+    width: 394px;
+    background-color: #fe5d26;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+  }
+}
+@media screen and (max-width: 1319px) {
+  .services-imgs-list {
+    position: relative;
+    margin-bottom: 17px;
+    height: 252px;
+  }
 }
 
 .services-imgs-list__item {
@@ -572,24 +815,51 @@ img {
 }
 .services-imgs-list__item:nth-child(1) {
   top: 0;
-  left: 47.23%;
+  right: 52.77%;
   z-index: 1;
   width: 204px;
-  transform: translateX(-50%);
+  transform: translateX(50%);
+}
+@media screen and (min-width: 1320px) {
+  .services-imgs-list__item:nth-child(1) {
+    right: 108px;
+    width: 400px;
+    transform: translateX(0);
+  }
 }
 .services-imgs-list__item:nth-child(2) {
   bottom: 0;
-  left: -1px;
   z-index: 2;
+}
+@media screen and (max-width: 1319px) {
+  .services-imgs-list__item:nth-child(2) {
+    left: -1px;
+  }
+}
+@media screen and (min-width: 1320px) {
+  .services-imgs-list__item:nth-child(2) {
+    right: 221px;
+  }
 }
 .services-imgs-list__item:nth-child(3) {
   bottom: 0;
   right: 0;
 }
+@media screen and (min-width: 1320px) {
+  .services-imgs-list__item:nth-child(3) {
+    bottom: 48px;
+  }
+}
 
 .services-list {
   margin-bottom: 16px;
-  padding-left: 17px;
+  padding-left: 16px;
+}
+@media screen and (min-width: 1320px) {
+  .services-list {
+    margin-bottom: 24px;
+    padding-left: 24px;
+  }
 }
 
 .services-list__item {
@@ -598,11 +868,22 @@ img {
   max-width: 151px;
   letter-spacing: 0.03em;
 }
-.services-list__item:nth-child(3) {
-  margin-bottom: 0;
+@media screen and (max-width: 1319px) {
+  .services-list__item:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .services-list__item--hidden {
+    display: none;
+  }
 }
-.services-list__item--hidden {
-  display: none;
+@media screen and (min-width: 1320px) {
+  .services-list__item {
+    margin-bottom: 16px;
+    max-width: 376px;
+  }
+  .services-list__item:last-child {
+    margin-bottom: 0;
+  }
 }
 .services-list__item::after {
   position: absolute;
@@ -615,11 +896,20 @@ img {
   background-color: #fe5d26;
   border-radius: 50%;
 }
-
-.symbol-hidden {
-  display: none;
+@media screen and (min-width: 1320px) {
+  .services-list__item::after {
+    top: 5px;
+    left: -24px;
+    width: 16px;
+    height: 16px;
+  }
 }
 
+@media screen and (max-width: 1319px) {
+  .symbol-hidden {
+    display: none;
+  }
+}
 .gallery-container {
   display: flex;
   justify-content: center;
@@ -646,6 +936,7 @@ img {
   margin-top: 0;
   margin-bottom: 0;
   padding: 8px 0;
+  max-width: 342px;
   width: 100%;
   font-size: 16px;
   line-height: 1.5;
