--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -30,9 +30,22 @@
     border: 1px solid $color-primary;
   }
 
-  &--center {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+  @media screen and (max-width: calc($desktop - 1px)) {
+    &--center {
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 290px;
+
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.33;
+    letter-spacing: 0.03em;
   }
 }
