--- a/sass/components/_services-section.scss
+++ b/sass/components/_services-section.scss
@@ -1,10 +1,40 @@
+@media screen and (min-width: $desktop) {
+  .services-container {
+    position: relative;
+
+    height: 608px;
+  }
+
+  .services-container__title {
+    position: relative;
+
+    margin-bottom: 98px;
+    padding-top: 48px;
+
+    &::after {
+      position: absolute;
+      left: 0;
+      top: -4px;
+
+      content: '';
+      display: block;
+      height: 4px;
+      width: 394px;
+
+      background-color: $color-accent;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+    }
+  }
+}
+
 .services-imgs-list {
   @extend %list;
 
-  position: relative;
-
-  margin-bottom: 17px;
-  height: 252px;
+  @media screen and (max-width: calc($desktop - 1px)) {
+    position: relative;
+    margin-bottom: 17px;
+    height: 252px;
+  }
 }
 
 .services-imgs-list__item {
@@ -12,23 +42,42 @@
 
   &:nth-child(1) {
     top: 0;
-    left: 47.23%;
+    right: 52.77%;
     z-index: 1;
 
     width: 204px;
 
-    transform: translateX(-50%);
+    transform: translateX(50%);
+
+    @media screen and (min-width: $desktop) {
+      right: 108px;
+
+      width: 400px;
+
+      transform: translateX(0);
+    }
   }
 
   &:nth-child(2) {
     bottom: 0;
-    left: -1px;
     z-index: 2;
+
+    @media screen and (max-width: calc($desktop - 1px)) {
+      left: -1px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      right: 221px;
+    }
   }
 
   &:nth-child(3) {
     bottom: 0;
     right: 0;
+
+    @media screen and (min-width: $desktop) {
+      bottom: 48px;
+    }
   }
 }
 
@@ -36,7 +85,12 @@
   @extend %list;
 
   margin-bottom: 16px;
-  padding-left: 17px;
+  padding-left: 16px;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 24px;
+    padding-left: 24px;
+  }
 }
 
 .services-list__item {
@@ -46,12 +100,23 @@
 
   letter-spacing: 0.03em;
 
-  &:nth-child(3) {
-    margin-bottom: 0;
+  @media screen and (max-width: calc($desktop - 1px)) {
+    &:nth-child(3) {
+      margin-bottom: 0;
+    }
+
+    &--hidden {
+      display: none;
+    }
   }
 
-  &--hidden {
-    display: none;
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 16px;
+    max-width: 376px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &::after {
@@ -66,9 +131,18 @@
 
     background-color: $color-accent;
     border-radius: 50%;
+
+    @media screen and (min-width: $desktop) {
+      top: 5px;
+      left: -24px;
+      width: 16px;
+      height: 16px;
+    }
   }
 }
 
-.symbol-hidden {
-  display: none;
+@media screen and (max-width: calc($desktop - 1px)) {
+  .symbol-hidden {
+    display: none;
+  }
 }
