--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/variables';
 @import './utils/placeholder';
+@import './utils/breakpoints';
 @import './base/normalize';
 @import './base/font';
 @import './base/common';
