--- a/sass/components/_gallery-section.scss
+++ b/sass/components/_gallery-section.scss
@@ -4,8 +4,16 @@
   align-items: center;
   padding: 5px 16px;
   background-color: $color-primary;
+
+  @media screen and (min-width: $desktop) {
+    padding: 25px 20px;
+  }
 }
 
-.gallery-center {
+.gallery-container__img {
   max-width: 342px;
+
+  @media screen and (min-width: $desktop) {
+    max-width: 1280px;
+  }
 }
