--- a/sass/components/_services-section.scss
+++ b/sass/components/_services-section.scss
@@ -1,6 +1,8 @@
 @media screen and (min-width: $desktop) {
   .services-container {
     position: relative;
+    padding-top: 48px;
+    padding-bottom: 48px;
 
     height: 608px;
   }
@@ -9,12 +11,11 @@
     position: relative;
 
     margin-bottom: 98px;
-    padding-top: 48px;
 
     &::after {
       position: absolute;
       left: 0;
-      top: -4px;
+      top: -52px;
 
       content: '';
       display: block;
@@ -50,7 +51,7 @@
     transform: translateX(50%);
 
     @media screen and (min-width: $desktop) {
-      right: 108px;
+      right: 88px;
 
       width: 400px;
 
@@ -67,7 +68,7 @@
     }
 
     @media screen and (min-width: $desktop) {
-      right: 221px;
+      right: 201px;
     }
   }
 
@@ -76,6 +77,7 @@
     right: 0;
 
     @media screen and (min-width: $desktop) {
+      right: 20px;
       bottom: 48px;
     }
   }
