--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -1,12 +1,29 @@
+.team-container__title {
+  &--center {
+    text-align: center;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 32px;
+  }
+}
+
 .team-list {
   @extend %list;
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .team-list__item {
   position: relative;
 
-  &:not(:last-child) {
-    margin-bottom: 16px;
+  @media screen and (max-width: calc($desktop - 1px)) {
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
   }
 }
 
@@ -18,9 +35,9 @@
   margin-top: 0;
   margin-bottom: 0;
   padding: 8px 0;
-  max-width: 342px;
   width: 100%;
 
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.03em;
@@ -28,4 +45,13 @@
   color: $color-secondary;
 
   background-color: $color-primary;
+
+  @media screen and (min-width: $desktop) {
+    padding: 20px 0;
+
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 1.33;
+    letter-spacing: normal;
+  }
 }
