--- a/sass/components/_works-section.scss
+++ b/sass/components/_works-section.scss
@@ -172,7 +172,7 @@
   letter-spacing: 0.03em;
 
   @media screen and (min-width: $desktop) {
-    padding-top: 116px;
+    padding: 116px 0;
     width: 510px;
   }
 }
