--- a/css/main.css
+++ b/css/main.css
@@ -440,11 +440,13 @@ img {
     width: 100vw;
     height: 100vh;
     background-color: #ffffff;
+    visibility: hidden;
     overflow-y: scroll;
     transform: translateY(-100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .menu-container.active {
+    visibility: visible;
     transform: translateY(0);
   }
 }
