--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -42,7 +42,7 @@
 
       content: '';
       display: block;
-      min-height: 557px;
+      height: 100%;
       width: 100vw;
 
       background: $hero-gradient;
