--- a/sass/components/_contacts-section.scss
+++ b/sass/components/_contacts-section.scss
@@ -1,7 +1,7 @@
 .contacts-section {
   padding-bottom: 15px;
 
-  @media screen {
+  @media screen and (min-width: $desktop) {
     padding-bottom: 20px;
   }
 }
