--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.social-network-list, .support-box__list, .about-us-box__list, .address-list, .team-list, .services-list, .services-imgs-list, .works-list, .menu-container__list {
+.social-network-list, .support-box__list, .about-us-box__list, .address-list, .team-list, .services-list, .services-imgs-list, .works-list, .site-nav__list {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -387,15 +387,10 @@ img {
   }
 }
 
-.site-nav {
+.page-header__container {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: flex-end;
-}
-@media screen and (min-width: 1320px) {
-  .site-nav {
-    align-items: center;
-  }
 }
 
 .logo {
@@ -403,6 +398,12 @@ img {
   padding: 8px 0;
   width: 56px;
   height: 32px;
+}
+@media screen and (min-width: 1320px) {
+  .logo {
+    width: 154px;
+    height: 39px;
+  }
 }
 
 .logo__icon {
@@ -459,25 +460,25 @@ img {
 }
 
 @media screen and (min-width: 1320px) {
-  .menu-container__list {
+  .site-nav__list {
     display: flex;
     gap: 48px;
   }
 }
 
 @media screen and (max-width: 1319px) {
-  .menu-container__item:not(:last-child) {
+  .site-nav__item:not(:last-child) {
     margin-bottom: 10px;
   }
 }
 @media screen and (min-width: 1320px) {
-  .menu-container__item {
+  .site-nav__item {
     padding-top: 24px;
     padding-bottom: 24px;
   }
 }
 
-.menu-container__link {
+.site-nav__link {
   display: inline-block;
   font-size: 24px;
   line-height: 1.33;
@@ -486,11 +487,11 @@ img {
   color: #1d1d1d;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-container__link:hover, .menu-container__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: #fe5d26;
 }
 @media screen and (min-width: 1320px) {
-  .menu-container__link {
+  .site-nav__link {
     display: block;
   }
 }
